@- Fixed a bug in preg_replace() that would truncate subject string if the @  first argument was en empty array. (Andrei) This fixes bug #6346, that would truncate subject string if the first argument was en empty array.